--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f1f1f1;
+  background-color: #d1d7dc;
 }
 
 .container {
@@ -7,4 +7,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  max-width: 1400px;
+  margin: 0 auto;
 }
