--- a/src/components/Chart/index.module.css
+++ b/src/components/Chart/index.module.css
@@ -1,7 +1,13 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 85%;
+  width: 70%;
+  padding: 0 20px;
+}
+@media (max-width: 1100px) {
+  .container {
+    width: 85%;
+  }
 }
 @media (max-width: 770px) {
   .container {
