add Cards component

--- a/src/components/Check/index.module.css
+++ b/src/components/Check/index.module.css
@@ -1,14 +1,14 @@
-ul {
+.container {
   list-style: none;
   font-size: 14px;
-  width: 70%;
+  width: 80%;
   padding: 20px;
 }
-li {
+.container li {
   position: relative;
   display: inline;
 }
-label {
+.container label {
   display: inline-block;
   border: 2px solid #d3d3d3;
   background-color: rgba(255, 255, 255, 0.9);
@@ -45,7 +45,7 @@ input:checked + label {
   transition: all 1s;
 }
 
-input {
+.container input {
   display: block;
   position: absolute;
   top: 50%;
@@ -56,12 +56,12 @@ input {
 }
 
 @media (max-width: 1100px) {
-  ul {
-    width: 85%;
+  .container {
+    width: 90%;
   }
 }
 @media (max-width: 770px) {
-  ul {
+  .container {
     width: 100%;
   }
 }
