--- a/src/components/Chart/index.module.css
+++ b/src/components/Chart/index.module.css
@@ -1,12 +1,12 @@
 .container {
   display: flex;
   justify-content: center;
-  width: 70%;
-  padding: 0 20px;
+  width: 80%;
+  padding: 20px;
 }
 @media (max-width: 1100px) {
   .container {
-    width: 85%;
+    width: 90%;
   }
 }
 @media (max-width: 770px) {
