--- a/src/components/Cards/index.module.css
+++ b/src/components/Cards/index.module.css
@@ -43,6 +43,12 @@
   color: #555;
 }
 
+.selecter {
+  border: none;
+  border-bottom: 2px solid #6a5acd;
+  width: 60%;
+}
+
 @media (max-width: 1100px) {
   .container {
     width: 90%;
