--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,7 @@
 body {
   background-color: #d1d7dc;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 .container {
@@ -7,6 +9,17 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  max-width: 1400px;
   margin: 0 auto;
+  width: 80%;
+}
+
+@media (max-width: 1100px) {
+  .container {
+    width: 90%;
+  }
+}
+@media (max-width: 770px) {
+  .container {
+    width: 100%;
+  }
 }
